--- a/wardrobe/wardrobe/Base.lproj/Main.storyboard
+++ b/wardrobe/wardrobe/Base.lproj/Main.storyboard
@@ -7,10 +7,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Customize View Controller-->
         <scene sceneID="zwu-Am-aRI">
             <objects>
-                <viewController id="ZiC-1A-7rk" sceneMemberID="viewController">
+                <viewController id="ZiC-1A-7rk" customClass="CustomizeViewController" customModule="wardrobe" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="UBY-dc-T8G">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
